# latam-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yaml
challenge/: __init__.py  api.py  cli.py  exploration.ipynb  model.py
checkpoints/: delay_model.pkl
docs/: challenge.md
infra/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/modules/latam-challenge/: main.tf  outputs.tf  variables.tf
scripts/: deploy_utils.py
stubs/sklearn/: linear_model.pyi
stubs/sklearn/utils/: validation.pyi
tests/api/: test_api.py
tests/model/: test_model.py
tests/stress/: api_stress.py
workflows/: cd.yml  ci.yml
