[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
  "click",
  "fastapi",
  "numpy",
  "pandas[parquet,feather]",
  "pydantic",
  "scikit-learn",
  "uvicorn"
]
name = "challenge"
version = "0.0.1"

[project.optional-dependencies]
all = ["challenge[dev,test,types]"]
dev = [
  "ipython",
  "jupyterlab",
  "matplotlib",
  "pre-commit",
  "ruff==0.1.14",
  "seaborn",
  "xgboost"
]
test = ["locust", "coverage", "pytest", "pytest-cov", "mockito", "httpx"]
types = ["mypy", "pandas-stubs"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
strict = true

# TODO: Write stubs for these packages
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["sklearn.metrics", "sklearn.model_selection"]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-select = ["I", "D"]
ignore = ["D100", "D101", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
packages = ["challenge"]
